# quillbot-python-sdk

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
mcp_resources/: START_HERE_AGENT_WORKFLOW.json  instructions.md
quillbot/: __init__.py  auth.py  client.py  diff_legend.py  endpoints.py  exceptions.py  http.py  models.py  server.py
quillbot/mcp_resources/: instructions.md
tests/: test_unit.py
