[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quillbot"
version = "0.1.3"
description = "A comprehensive Python SDK for the QuillBot API."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"
dependencies = [
    "httpx>=0.27",
    "platformdirs>=4.0.0",
    "mcp>=1.2.1",
]

[project.scripts]
quillbot-mcp = "quillbot.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
